name:   aws
version:           0.0.0
cabal-version:     >= 1.6
build-type:        Simple

library
    Buildable: True
    exposed-modules: Action
    other-modules: AWS 
                 , Filters
                 , Config
                 , Request
                 , Request.DescribeInstances
                 , Request.DescribeSpotInstanceRequests
                 , Request.RequestSpotInstances
                 , Request.RequestTH
                 , Request.RequestDefParser
                 , Util

    extensions: NoImplicitPrelude

    build-depends: base
                 , containers
                 , mtl
                 , filepath
                 , directory
                 , transformers
                 , text
                 , bytestring
                 , xml-conduit
                 , http-conduit
                 , failure
                 , unix
                 , old-locale
                 , time
                 , HTTP
                 , SHA
                 , http-types
                 , blaze-builder
                 , base64-bytestring
                 , yaml
                 , data-default
                 , template-haskell
                 , syb
                 , parsec
                 , monad-control
                 , classy-prelude

executable        aws
    main-is:       main.hs